[gd_scene load_steps=4 format=3 uid="uid://do0jofee2u6m0"]

[ext_resource type="Theme" uid="uid://d2cxgswnxv5r8" path="res://theme/menuTheme.tres" id="1_s8giw"]
[ext_resource type="Script" path="res://menus/endGame/end_game.gd" id="2_u1hl0"]
[ext_resource type="PackedScene" uid="uid://1nws1ni3xgmy" path="res://menus/settings/settings.tscn" id="3_1tfo8"]

[node name="EndGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("1_s8giw")
script = ExtResource("2_u1hl0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -118.0
offset_right = 71.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[node name="Status" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "You were Injured"
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "10"
horizontal_alignment = 1

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Settings" parent="." instance=ExtResource("3_1tfo8")]
visible = false
layout_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="closedSettings" from="Settings" to="." method="_on_settings_closed_settings"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
